syntax = "proto3";

package darmok.protobuf;

import "varying.proto";

message StandardProgram {
    enum Type {
        Unlit = 0;
        ForwardBasic = 1;
        Forward = 2;
        Gui = 3;
        Tonemap = 4;
    }
}

message ProgramRef {
    oneof program {
        string path = 1;
        StandardProgram.Type standard = 2;
    }
}

message ProgramSource {
    string name = 1;
    string vertex_shader = 2;
    string fragment_shader = 3;
	Varying varying = 4;
}

message Shader {
    bytes data = 1;
    repeated string defines = 3;
}

message ProgramProfile {
    repeated Shader fragment_shaders = 1;
    repeated Shader vertex_shaders = 2;
}

message Program {
    string name = 1;
    map<string, ProgramProfile> profiles = 2;
    Varying varying = 3;
}